--- a/res/layout/activity_twitsecond_screen.xml
+++ b/res/layout/activity_twitsecond_screen.xml
@@ -7,5 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hubba.Twitsecond_screen" >
+    
+    <ImageView
+        android:id="@+id/dock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/doc" />
 
 </RelativeLayout>
