--- a/res/layout/activity_twitsecond_screen.xml
+++ b/res/layout/activity_twitsecond_screen.xml
@@ -12,12 +12,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hubba.Twitsecond_screen" >
-    
-     <EditText android:id="@+id/edit_message"
-        android:layout_weight="1"
-        android:layout_width="40dp"
-        android:layout_height="0dp"
-        android:hint="@string/edit_message" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tweet"
+        android:textColor="#000000" 
+        android:onClick="go3Twit"/>
+    
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:ems="10" android:inputType="text">
+
+        <requestFocus />
+    </EditText>
 
 </LinearLayout>
